# natural-event-tracker

./: .gitignore  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  Nasa_ui.qmlproject  Nasa_ui.qmlproject.qtds  README.md  qmlcomponents  qmlmodules
app/: main.cpp
content/: App.qml  CMakeLists.txt  MyMapItem.qml  Screen01.qml
data/: nigga.txt
imports/: CMakeLists.txt
imports/Nasa_ui/: CMakeLists.txt  qmldir
imports/Nasa_ui/designer/: plugin.metainfo
src/: CMakeLists.txt  Makefile  apikey.cpp  apikey.hpp  event.cpp  event.hpp  fileHandler.cpp  fileHandler.hpp  main.cpp  mapController.cpp  mapController.hpp  models.hpp
src/core/: apikey.cpp  event.cpp  fileHandler.cpp  mapController.cpp
src/include/: category.hpp  event.hpp  import_qml_plugins.h  mapController.hpp
src/nasa_proj/: CmakeLists.txt
src/nasa_proj/src/: CMakeLists.txt  apikey.cpp  apikey.hpp  category.cpp  category.hpp  event.cpp  fileHandler.cpp  fileHandler.hpp  models.hpp
src/nasa_proj/tests/: test.cpp
tests/: CMakeLists.txt  test.cpp  test_api.cpp  test_category.cpp  test_event.cpp  test_fh.cpp
